fix overflow

--- a/components/Layout/nav.module.scss
+++ b/components/Layout/nav.module.scss
@@ -43,7 +43,6 @@ $navbarHeight: 55px;
   padding: 0;
   a {
     display: block;
-    width: 100%;
     padding: 15px 20px;
   }
   .activeLink {
